--- a/home/templates/home/detail.html
+++ b/home/templates/home/detail.html
@@ -66,7 +66,7 @@
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
         zoom: 15,
-        center: {lat: 43.7735, lng: -79.5}
+        center: {lat: 28.527582, lng: 77.0688975}
         });
         var geocoder = new google.maps.Geocoder();
         geocodeAddress(geocoder, map);
@@ -82,13 +82,13 @@
             position: results[0].geometry.location
             });
         } else {
-            alert('Geocode was not successful for the following reason: ' + status);
+            alert('Geocode beta stage currently not in execution mode');
         }
         });
     }
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdgUnGmwFjRBhpJ5lQu_5sJ3GNzn6k5bI&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAE6C-Lnitz6l5igILfW7DYxpSgjuuTK5w&callback=initMap">
     </script>
 <br>
 <div class="row">
